--- a/_includes/site-toc.html
+++ b/_includes/site-toc.html
@@ -1,6 +1,7 @@
-<nav class="js-toc toc" style="border-top: 0px none;">
+<nav class="js-toc toc" style="border-top: 0px none;" markdown="1">
 <img style="padding-top: 0px; width: 30%;" src="{{ site.url }}/assets/images/Logo%20color%20trnsprnt.png" alt="Logo color trnsprnt">
 
+<!--
 <p>
 <h2 class="toc__title" style="padding-top: 0.0rem; color: rgb(159, 29, 33); font-style: italic; text-decoration: underline;">
   <img src="{{ site.url }}/assets/images/bible-icon.png" style="width: 20px; margin-right: 5px;" alt="bible-icon"/><a href="{{ site.url }}/tag/">List of topics</a><br />
@@ -10,7 +11,12 @@
   <img src="{{ site.url }}/assets/images/bible-icon.png" style="width: 20px; margin-right: 5px;" alt="bible-icon"/><a href="{{ site.url }}/bible-studies/Baptism/">Baptism</a>
 </h1>
 </p>
+-->
+{% include bible-study/bible-studies %}
+{% include toc_spacer.html %}
+{% include foundational-truths.html %}
 
+<!--
 <h4 class="toc__title" style="padding-top: 0.0rem;">Foundational Truths</h4>
 <ul class="toc__menu" id="markdown-toc">
   <li>No More Condemnation<ul>
@@ -34,6 +40,7 @@
     </ul>
   </li>
 </ul>
+-->
 
 </nav>
 
