--- a/_includes/foundational-truths-viet.html
+++ b/_includes/foundational-truths-viet.html
@@ -1,23 +1,4 @@
-<nav class="js-toc toc" style="border-top: 0px none;" markdown="1">
-<img style="padding-top: 0px; width: 30%;" src="{{ site.url }}/assets/images/Logo%20color%20trnsprnt.png" alt="Logo color trnsprnt">
-
-<!--
-<p>
-<h2 class="toc__title" style="padding-top: 0.0rem; color: rgb(159, 29, 33); font-style: italic; text-decoration: underline;">
-  <img src="{{ site.url }}/assets/images/bible-icon.png" style="width: 20px; margin-right: 5px;" alt="bible-icon"/><a href="{{ site.url }}/tag/">Các từ khóa</a><br />
-  <img src="{{ site.url }}/assets/images/bible-icon.png" style="width: 20px; margin-right: 5px;" alt="bible-icon"/><a href="{{ site.url }}/bible-studies-viet/Ro-ma/">Sách Rô-ma</a><br />
-  <img src="{{ site.url }}/assets/images/bible-icon.png" style="width: 20px; margin-right: 5px;" alt="bible-icon"/><a href="{{ site.url }}/bible-studies-viet/Ga-la-ti/">Sách Ga-la-ti</a><br />
-  <img src="{{ site.url }}/assets/images/bible-icon.png" style="width: 20px; margin-right: 5px;" alt="bible-icon"/><a href="{{ site.url }}/bible-studies-viet/Ngu-Ngon/">Các ngụ ngôn</a><br />
-  <img src="{{ site.url }}/assets/images/bible-icon.png" style="width: 20px; margin-right: 5px;" alt="bible-icon"/><a href="{{ site.url }}/bible-studies-viet/Bap-tem/">Báp-têm</a>
-</h1>
-</p>
--->
-
-{% include bible-study/bible-studies-Viet %}
-{% include toc_spacer.html %}
-{% include foundational-truths-viet.html %}
-
-<!--
+<nav class="js-toc toc">
 <h4 class="toc__title" style="padding-top: 0.0rem;">Chân Lý Nền Tảng</h4>
 <ul class="toc__menu" id="markdown-toc">
   <li>Không Còn Bị Lên Án<ul>
@@ -41,8 +22,4 @@
     </ul>
   </li>
 </ul>
--->
-
 </nav>
-
-
