--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -88,12 +88,17 @@
     <meta name="theme-color" content="#ffffff">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-62532661-1"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=VACSF-HTTP-Request"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
-        gtag('config', 'UA-62532661-1');
+        gtag('config', 'VACSF-HTTP-Request', {
+            transport_url: 'https://vacsf.org',
+        });
+        function sendEvent() {
+            gtag('event', 'click');
+        }
     </script>
 
   </head>
