--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -87,18 +87,14 @@
     <meta name="msapplication-TileImage" content="{{ site.url }}/mstile-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=VACSF-HTTP-Request"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-94SR2XY6LV"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
-        gtag('config', 'VACSF-HTTP-Request', {
-            transport_url: 'https://vacsf.org',
-        });
-        function sendEvent() {
-            gtag('event', 'click');
-        }
+
+        gtag('config', 'G-94SR2XY6LV');
     </script>
 
   </head>
